--- a/estilzacao/inde.html
+++ b/estilzacao/inde.html
@@ -60,11 +60,11 @@
           </p>
         </div>
         <div class="tec-container">
-          <div>
+          <div class="tec-box">
             <img class="tec-img" src="./src/img/html.png" alt="" />
             <img class="tec-img" src="./src/img/css.png" alt="" />
           </div>
-          <div>
+          <div class="tec-box">
             <img class="tec-img" src="./src/img/mysql3d.png" alt="" />
             <img class="tec-img" src="./src/img/php.png" alt="" />
           </div>
@@ -96,8 +96,5 @@
     <footer>
       <p>&copy; PROJETO PHP</p>
     </footer>
-    <?php 
-      phpinfo();
-    ?>
   </body>
 </html>
