--- a/estilzacao/logout.html
+++ b/estilzacao/logout.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="<?=ROOT?>/assets/img/php3d.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="<?=ROOT?>/assets/img/php3d.png"
+      type="image/x-icon"
+    />
     <title>Logout</title>
-    <link rel="stylesheet" href="<?=ROOT?>/assets/css/reset.css" />
-    <link rel="stylesheet" href="<?=ROOT?>/assets/css/logout.css" />
-    <link rel="stylesheet" href="<?=ROOT?>/assets/css/style.css" />
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
-
-    <h1>Você foi desconetado</h1>
-    <a href="<?=ROOT?>">HOME</a>
-    <?=footer()?>
-
-</body>
-
+  <body class="vh-100 d-flex flex-column justify-content-center">
+    <div
+      style="width: 600px"
+      class="container p-5 text-center shadow rounded flex-column justify-content-center align-items-center bg-body-tertiary"
+    >
+      <h1>Você foi desconetado :(</h1>
+      <iframe
+        src="https://giphy.com/embed/w61NUc9wVBAZi5PUOY"
+        width="480"
+        height="271"
+        frameborder="0"
+        class="rounded my-5"
+      ></iframe>
+      <a
+        class="d-block w-25 btn btn-primary mx-auto fw-semibold"
+        href="<?=ROOT?>"
+        >HOME</a
+      >
+    </div>
+  </body>
 </html>
-
-<?php 
-
-    
