--- a/estilzacao/contato.html
+++ b/estilzacao/contato.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="<?=ROOT?>/assets/img/php3d.png" type="image/x-icon" />
     <title>Contato</title>
-    <link rel="stylesheet" href="<?=ROOT?>/assets/css/reset.css" />
+    <!-- <link rel="stylesheet" href="<?=ROOT?>/assets/css/reset.css" />
     <link rel="stylesheet" href="<?=ROOT?>/assets/css/style.css" />
-    <link rel="stylesheet" href="<?=ROOT?>/assets/css/contato.css" />
-
+    <link rel="stylesheet" href="<?=ROOT?>/assets/css/contato.css" /> -->
+    
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/contato.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
 </head>
 
 <body>
